<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Copy extends Model
{
    protected $fillable = [
        'cookbook_i',
        'status',
        'condition',
    ];
    
}